# ios-cmake

./: .gitignore
samples/: build.sh
samples/Hello/: CMakeLists.txt
samples/Hello/cmake/: DependencyManagement.cmake
samples/Hello/include/: CMakeLists.txt
samples/Hello/src/: CMakeLists.txt
samples/hello-app/hello-app.xcodeproj/: project.pbxproj
samples/hello-app/hello-app.xcodeproj/project.xcworkspace/xcuserdata/oliver.xcuserdatad/: UserInterfaceState.xcuserstate
samples/hello-lib/: CMakeLists.txt  iOS.cmake
samples/hello-lib/cmake/: CheckCXX11Regex.cmake  CrossCompile-Android.cmake  CrossCompile-iOS.cmake
